# libarchive-feedstock

./: .gitattributes  .recipe_maintainers.json  .travis.yml  README.md  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-win.yml
.ci_support/: linux_.yaml  linux_64_.yaml  linux_64_license_familygpl.yaml  linux_64_license_familylgpl.yaml  linux_64_openssl1.1.1.yaml  linux_64_openssl3.yaml  linux_aarch64_.yaml  linux_aarch64_license_familygpl.yaml  linux_aarch64_license_familylgpl.yaml  linux_aarch64_openssl1.1.1.yaml  linux_aarch64_openssl3.yaml  linux_c_compilergcc.yaml  linux_c_compilertoolchain_c.yaml  linux_ppc64le_.yaml  linux_ppc64le_license_familygpl.yaml  linux_ppc64le_license_familylgpl.yaml  linux_ppc64le_openssl1.1.1.yaml  linux_ppc64le_openssl3.yaml  osx_.yaml  osx_64_.yaml  osx_64_license_familygpl.yaml  osx_64_license_familylgpl.yaml  osx_64_openssl1.1.1.yaml  osx_64_openssl3.yaml  osx_arm64_.yaml  osx_arm64_license_familygpl.yaml  osx_arm64_license_familylgpl.yaml  osx_arm64_openssl1.1.1.yaml  osx_arm64_openssl3.yaml  osx_c_compilerclang.yaml  osx_c_compilertoolchain_c.yaml  win_.yaml  win_64_.yaml  win_64_license_familygpl.yaml  win_64_license_familylgpl.yaml  win_64_openssl1.1.1.yaml  win_64_openssl3.yaml  win_arm64_license_familygpl.yaml  win_arm64_license_familylgpl.yaml  win_c_compilervs2008vc9.yaml  (+1 more)
.github/: CODEOWNERS
.scripts/: build_steps.sh  run_osx_build.sh
recipe/: 0004-VC9-compatibility-define-BCRYPT_SUCCESS.patch  0006-VC-openssl-define-inline-as-__inline.patch  bld.bat  (+7 more)
recipe/test/: CMakeLists.txt  test.c
(+10 files in other folders)
